fix footer on collections and bulk-operations on mobile

--- a/projects/bp-gallery/src/components/views/browse/BrowseView.scss
+++ b/projects/bp-gallery/src/components/views/browse/BrowseView.scss
@@ -1,5 +1,5 @@
 .browse-container {
-  max-width: inherit;
+  max-width: 1200px;
   margin: auto;
 
   .collection-picture-display {
